# conductor

./: .gitignore  CONTEXT.md  HANDOFF.md  LICENSE  README.md  README_zh.md  pyproject.toml
docs/: discussion-notes.md  future-projects.md  handoff-protocol.md  task-sizing.md  trust-calibration.md
src/conductor/: __init__.py  cli.py  digest.py  digest_display.py  display.py  memory.py  parser.py  retro.py  scanner.py
templates/: CLAUDE.md.template  DESIGN.md.template  ERROR_BOOK.md.template  HANDOFF.md.template  TRUST_PROFILE.md.template
