[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conductor"]

[project]
name = "conductor-ai"
version = "0.1.0"
description = "A framework for humans who orchestrate multiple AI coding agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "cyq1017" },
]
keywords = ["ai", "agent", "multi-agent", "handoff", "developer-tools", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
conductor = "conductor.cli:main"

[project.urls]
Homepage = "https://github.com/cyq1017/conductor"
Repository = "https://github.com/cyq1017/conductor"
